# py-project-tmpl

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTOR.md  README.md  bootstrap  bootstrap.ps1  bootstrap.sh  mkdocs.yml  pyproject.toml  quickstart.sh
docs/: AutomatedDevelopment.md  Observability.md  PyAPISpec.md  index.md
docs/ArchitectureRealization/: index.md
docs/ArchitectureRealization/Phase1-VisionModelsPredicates/: index.md
docs/Registry/: AutomatedDevelopment.md  NarrativeProceduralLang.md  PyAPISpec.md  index.md
docs/javascripts/: progress-tracker.js
docs/stylesheets/: welcome-progress.css
docs/welcome/: command-inventory.md  concepts.md  index.md  quick-reference-card.md  quickstart.md  reference.md  setup.md  workflow.md
helpers/: bootstrap.py  bootstrap.sh  build.py  cache.py  docs.py  format.py  lint.py  python.py  run.py  test.py  tool  utils.py
helpers/bootstrap/: 00_foundation.py  10_prereqs.py  20_tools.py  30_proj.py  40_dx.py  README.MD  __init__.py  __main__.py  orchestrator.py  platform.py  state.py  verify.py
helpers/tools/: __init__.py  __main__.py  build.py  cache.py  chat.py  docs.py  format.py  lint.py  python.py  test.py
kb/logs-and-metrics/: Report-Opus4.md  Report-o3.md
meta/kb/: ResearchPrePlanTmpl.md  WriteResearchPlan.md
meta/work/: PlanTmpl.md
src/my_tool/: __init__.py  cli.py
src/observability/: __init__.py  config.py  context.py  core.py  shared.py  types.py
tests/: conftest.py  test_basic.py  test_quickstart.py  test_utils.py
tests/helpers/: test_cache.py  test_chat_client.py  test_chat_tool.py  test_format.py  test_http_session.py  test_lint.py  test_logging.py  test_python.py  test_state.py  test_tools_main.py  test_utils.py  test_venv_want.py
(+60 files in other folders)
