[project]
name = "my-tool"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
builder = [
  "build>=1",
  "ruff>=0.5",
  "mkdocs-material",
]
tester = [
  "pytest>=8.0",
]

[tool.uv]
dev-dependencies = [
  "build>=1",
  "pytest>=8.0",
  "ruff>=0.5",
  "mkdocs-material",
]
